demo/monitoring/05-grafana.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-core
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      securityContext:
        runAsUser: 472
        fsGroup: 472
      containers:
      - image: grafana/grafana:6.4.2
        name: grafana-core
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        # env:
        #   - name: GF_PATHS_CONFIG
        #     value: /var/grafana/grafana.ini
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
        volumeMounts:
        - name: monitoring-storage
          mountPath: /var/lib/grafana
        - name: grafana-dashboard
          mountPath: /var/lib/grafana/dashboards
        - name: grafana-config
          mountPath: /etc/grafana
          readOnly: true
      volumes:
      - name: monitoring-storage
        persistentVolumeClaim:
          claimName: monitoring-storage
      - name: grafana-dashboard
        configMap:
          name: grafana-dashboard
      - name: grafana-config
        configMap:
          name: grafana-config
          items:
          - key: grafana.ini
            path: grafana.ini
          - key: datasources.yaml
            path: provisioning/datasources/datasources.yaml
          - key: dashboards.yaml
            path: provisioning/dashboards/dashboards.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: grafana
    component: core
