demo/monitoring/05-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`grafana.meetup.containous.tech`)
      services:
        - name: grafana
          port: 3000
      # middlewares:
      #   - name: https-redirect
      #     namespace: traefikee

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
  namespace: monitoring
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`grafana.meetup.containous.tech`)
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: default
