demo/monitoring/06-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  entryPoints:
    - http
    - https
  routes:
    - match: Host(`grafana.docker.localhost`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  entryPoints:
    - http
    - https
  routes:
    - match: Host(`prometheus.docker.localhost`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
  tls:
    certResolver: default
